# performer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: update-forks-release-dates.yml
cmake/: arm.cmake
docs/: index.html  style.css  theme.js
docs/build-guide/: index.html
docs/cheatsheet/: index.html
docs/doc/: PERFORMERstep16_BSP.beatsteppro
docs/donate/: index.html
docs/features/: index.html
docs/forks/: index.html
docs/license/: index.html
docs/manual/: index.html
docs/testdrive/: index.html
docs/testdrive/sim/: sequencer.data  sequencer.html  sequencer.js  sequencer.wasm
scripts/: update_forks_release_dates.py
src/: CMakeLists.txt  SystemConfig.h
src/apps/bootloader/: Bootloader.cpp
src/apps/sequencer/: CMakeLists.txt  Config.h  Sequencer.cpp
src/apps/sequencer/engine/: ArpTrackEngine.cpp  ArpTrackEngine.h  CurveTrackEngine.cpp  Engine.cpp  Engine.h  EngineTestHooks.h  MidiCvTrackEngine.cpp  NoteTrackEngine.cpp  NoteTrackEngine.h  StochasticEngine.cpp
src/apps/sequencer/model/: ArpSequence.cpp  ArpSequence.h  ArpTrack.cpp  ArpTrack.h  ClockSetup.cpp  ClockSetup.h  CurveSequence.cpp  CurveSequence.h  CurveTrack.cpp  CurveTrack.h  FileManager.cpp  FileManager.h  LogicSequence.cpp  LogicSequence.h  LogicTrack.cpp  LogicTrack.h  MidiCvTrack.cpp  Model.cpp  Model.h  ModelUtils.h  NoteSequence.cpp  NoteSequence.h  NoteTrack.cpp  NoteTrack.h  Project.cpp  Project.h  ProjectVersion.h  Scale.cpp  Scale.h  Settings.h  StochasticSequence.cpp  StochasticSequence.h  StochasticTrack.cpp  StochasticTrack.h  Types.h  UserScale.cpp  UserScale.h  UserSettings.cpp  UserSettings.h
src/apps/sequencer/python/: project.cpp  sequencer.cpp
src/apps/sequencer/ui/: Controller.h  ControllerManager.cpp  ControllerManager.h  PageManager.cpp  Screensaver.cpp  Screensaver.h  StepSelectionUtils.h  Ui.cpp  Ui.h
src/core/io/: VersionedSerializedReader.h
src/platform/sim/: CMakeLists.txt
src/platform/sim/html/: testdrive_shell.html
src/tests/unit/sequencer/: CMakeLists.txt  TestGeneratorSemantics.cpp  TestNoteSequence.cpp  TestProjectScaleRemap.cpp  TestVoltageModeRegression.cpp
(+109 files in other folders)
