include_directories(../../../apps/sequencer)

register_test(TestCurve TestCurve.cpp)
register_test(TestGeneratorSemantics TestGeneratorSemantics.cpp)
register_test(TestNoteSequence TestNoteSequence.cpp)
register_test(TestProjectScaleRemap TestProjectScaleRemap.cpp)
register_test(TestScale TestScale.cpp)
if(${PLATFORM} STREQUAL "sim")
    register_test(TestVoltageModeRegression TestVoltageModeRegression.cpp)
endif()

target_link_libraries(TestGeneratorSemantics sequencer_shared)
target_link_libraries(TestProjectScaleRemap sequencer_shared)
if(${PLATFORM} STREQUAL "sim")
    target_link_libraries(TestVoltageModeRegression sequencer_shared)
endif()
